apps/base/dev-gitea/deploy/gitea/gitea-statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: gitea
      app.kubernetes.io/component: gitea
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gitea
        app.kubernetes.io/component: gitea
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000 # git
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: gitea
        image: "registry.lan/gitea:1.27.2-rootless"
        imagePullPolicy: IfNotPresent
        args: [ "/usr/local/bin/init_and_start.sh" ]
        ports:
        - containerPort: 3000
          name: http
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: http
        resources:
          requests:
            cpu: 25m
            memory: 256Mi
          limits:
            cpu: 250m
            memory: 256Mi
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: gitea-data
          mountPath: /var/lib/gitea
          subPath: data
        - name: gitea-init
          mountPath: /usr/local/bin/init_and_start.sh
          subPath: init_and_start.sh
        - name: cluster-ca-volume
          mountPath: /usr/local/share/ca-certificates/cluster_ca.crt
          subPath: ca.crt
        - name: cluster-ca-volume
          mountPath: /etc/ssl/cluster/ca.crt
          subPath: ca.crt
        - name: certs-volume
          mountPath: /etc/ssl/certs
        - name: tmp-volume
          mountPath: /tmp
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: gitea-init
        configMap:
          name: gitea-init
          defaultMode: 0555
      - name: gitea-data
        persistentVolumeClaim:
          claimName: gitea-data
      - name: cluster-ca-volume
        secret:
          secretName: cluster-ca
      - name: tmp-volume
        emptyDir: {}
      - name: certs-volume
        emptyDir: {}
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
