apps/base/dev-gitea/deploy/gitea/gitea-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  labels:
    prometheus-target: gitea
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/component: gitea
